Fix text wrapping

--- a/static/moekki.css
+++ b/static/moekki.css
@@ -20,8 +20,6 @@ section {
   left: 0;
   top: 0;
   padding: 1em;
-  width: 100%;
-  height: 100%;
   background-color: #000;
 }
 
